Begin 1.20.6 stuff, fix block event bugs again